--- a/style.css
+++ b/style.css
@@ -16,3 +16,37 @@ h1{
   padding-left:3%;
   
 }
+
+.side-nav {
+  width:175px;
+  height:100%;
+  background:#0d74f5;
+  position: fixed;
+  top:0;
+  left:0;
+}
+
+.nav-links {
+  list-style: none;
+  position: relative;
+  padding-left: 5px;
+}
+
+.nav-links li{
+  padding-top: 5px;
+}
+
+.nav-links li.active{
+  background-color: #77a3da;
+  color: #37bb25;
+}
+
+.nav-links li a{
+  color: #fff;
+  text-decoration: none;
+}
+
+.content{
+  margin-left: 175px;
+  padding-left: 5px;
+}
