--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1{
 .side-nav {
   width:175px;
   height:100%;
-  background:#0d74f5;
+  background:#dd95ff;
   position: fixed;
   top:0;
   left:0;
